# calvin_pick_muffin_demo

./: CMakeLists.txt  package.xml
launch/: infrastructure.launch
scripts/: pick_muffin_demo.py
