<package>
  <name>calvin_pick_muffin_demo</name>
  <version>0.0.1</version>
  <description>Demo for calvin's pick_server</description>
  <author>Michael Goerner</author>
  <maintainer email="mgoerner@uni-osnabrueck.de">Michael Goerner</maintainer>
  <license>BSD</license>

  <url></url>

  <!-- dependencies of the demo script -->
  <run_depend>rospy</run_depend>

  <run_depend>actionlib</run_depend>

  <run_depend>muffin_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>

  <!-- service/action dependencies -->
  <run_depend>calvin_moveit_config</run_depend>
  <run_depend>muffin_rgbd_object_recognition</run_depend>
  <!-- muffin_rgbd_object_recognition's detect_muffin_server requires a tabletop segmentation action -->
  <run_depend>curious_table_exploration</run_depend>

  <run_depend>calvin_pick_server</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
